# aoe_inc

./: .flake8  .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
game/: aoe.py  entity.py  game.py  point.py  translator.py
game/entities/: aoe.py  entity.py
game/utils/: translator.py
rendering/: game_renderer.py
rendering/prefabs/: flashbang.py  sparks.py
