[tool.poetry]
name = "aoe-inc"
version = "0.1.0"
description = ""
authors = ["Nicolas M. <mine.nicolas@gmail.com>"]
readme = "README.md"
packages = [{include = "aoe_inc"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"
pydantic = "^2.5.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
